<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbarNewNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbar.color"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEdtToolbarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add.note"
            android:textSize="@dimen/textview.toolbar.title.textsize"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgAttachImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.2"
            android:contentDescription="@null"
            android:src="@drawable/ic_attach_file_black_24dp" />

        <ImageView
            android:id="@+id/imgSaveNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.2"
            android:contentDescription="@null"
            android:src="@drawable/ic_save_black_24dp" />
        <ImageView
            android:id="@+id/imgEditNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.2"
            android:contentDescription="@null"
            android:src="@drawable/ic_border_color_black_24dp" />

        <ImageView
            android:id="@+id/imgDeleteNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.2"
            android:contentDescription="@null"
            android:src="@drawable/ic_delete_forever_black_24dp" />
    </LinearLayout>
</android.support.v7.widget.Toolbar>

