<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnAttachFile"
        android:icon="@drawable/ic_attach_file_black"
        android:title="@string/menu_item_attachFile"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnSave"
        android:icon="@drawable/ic_save_black"
        android:title="@string/menu_item_save"
        app:showAsAction="ifRoom" />
</menu>

