...
            android:layout_weight="6"
            android:text="@string/name.node_edit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textView.size" />

        <ImageView
            android:id="@+id/imgAddNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/image.description"
            android:src="@drawable/ic_add_box_white_24dp" />

...
